Adding scss mobile first form

--- a/index.html
+++ b/index.html
@@ -275,7 +275,8 @@
         </div>
         <span class="reviews__smallText">Que disent ils&nbsp;?</span>
         <article class="reviews__article" itemscope itemtype="https://schema.org/Review">
-            <h2 role="heading" aria-level="2" class="reviews__article__title hidden" itemprop="name">Avis Frédéric Dubois</h2>
+            <h2 role="heading" aria-level="2" class="reviews__article__title hidden" itemprop="name">Avis Frédéric
+                Dubois</h2>
             <p class="reviews__article__text" itemprop="reviewBody">
                 “Sam a dépassé nos attentes avec le design de notre boutique en ligne. Le site
                 capture parfaitement l'essence de notre artisanat, offrant une expérience visuelle captivante. Grâce à
@@ -287,7 +288,8 @@
             </p>
         </article>
         <article class="reviews__article" itemscope itemtype="https://schema.org/Review">
-            <h2 role="heading" aria-level="2" class="reviews__article__title hidden" itemprop="name">Avis Luca Roberty</h2>
+            <h2 role="heading" aria-level="2" class="reviews__article__title hidden" itemprop="name">Avis Luca
+                Roberty</h2>
             <p class="reviews__article__text" itemprop="reviewBody">
                 “Il a créé un site web exceptionnel pour moi en tant que photographe. Il a
                 capturé parfaitement l'esthétique de mon travail, offrant une présentation visuelle saisissante. Le site
@@ -299,7 +301,8 @@
             </p>
         </article>
         <article class="reviews__article" itemscope itemtype="https://schema.org/Review">
-            <h2 role="heading" aria-level="2" class="reviews__article__title hidden" itemprop="name">Avis Chenghao Pan</h2>
+            <h2 role="heading" aria-level="2" class="reviews__article__title hidden" itemprop="name">Avis Chenghao
+                Pan</h2>
             <p class="reviews__article__text" itemprop="reviewBody">
                 “Un grand merci à Sam pour avoir transformé notre approche des commandes en
                 ligne. Le site web de notre restaurant est maintenant plus convivial grâce à sa conception intuitive et
@@ -323,12 +326,12 @@
                 </a>
             </div>
             <div class="info__image">
-            <img src="./src/img/alerte_portfolio.webp"
-                 alt="Illustration d'un personnage"
-                 title="Illustration d'un personnage"
-                 width="348"
-                 height="392"
-            >
+                <img src="./src/img/alerte_portfolio.webp"
+                     alt="Illustration d'un personnage"
+                     title="Illustration d'un personnage"
+                     width="348"
+                     height="392"
+                >
             </div>
         </div>
     </section>
@@ -350,7 +353,7 @@
                         title="Illustration"
                         width="592"
                         height="592"
-                        class="img"
+                        class="img special_hidden"
                 >
             </div>
             <div class="contact__form">
@@ -378,7 +381,7 @@
                         <div class="contact__form__budget">
                             <label for="budget">Budget</label>
                             <select name="budget" id="budget">
-                                <option value="default" disabled selected>Choisir mon budget</option>
+                                <option value="default" class="default" disabled selected>Choisir mon budget</option>
                                 <option value="-3000">En dessous de 3.000€</option>
                                 <option value="3000__5000">Entre 3.000€ et 5.000€</option>
                                 <option value="5000__10000">Entre 5.000€ et 10.000€</option>
@@ -394,8 +397,11 @@
                         <button type="submit">Envoyer</button>
                     </fieldset>
                 </form>
-                <p class="contact__form__text">Envie de voir de quoi je suis capable&nbsp;?</p>
-                <a href="#" class="contact__form__link" title="Visitez mon portfolio">Aller voir mon portfolio</a>
+                <div class="contact__form__bottom">
+                    <p class="contact__form__bottom__text">Envie de voir de quoi je suis capable&nbsp;?</p>
+                    <a href="#" class="contact__form__bottom__link" title="Visitez mon portfolio">Aller voir mon
+                        portfolio</a>
+                </div>
             </div>
         </div>
     </section>
