Adding scss to form

--- a/index.html
+++ b/index.html
@@ -408,87 +408,94 @@
     <footer role="contentinfo">
         <section class="footer">
             <h2 role="heading" aria-level="2" class="footer__title">Sam Requena</h2>
-            <ul role="list" class="footer__col1">
-                <li>
-                    <a title="Retour à l'accueil" href="#home">Accueil</a>
-                </li>
-                <li>
-                    <a title="Visitez mon portfolio" href="#portfolio">Portfolio</a>
-                </li>
-            </ul>
-            <ul role="list" class="footer__col2">
-                <li>
-                    <a title="Vers la partie de mon parcours" href="#parcours">Mon parcours</a>
-                </li>
-                <li>
-                    <a title="Vers la partie à propos de moi" href="#about">A propos de moi</a>
-                </li>
-                <li>
-                    <a title="Vers la partie de mes compétences" href="#skills">Mes compétences</a>
-                </li>
-            </ul>
-            <ul role="list" class="footer__col3">
-                <li>
-                    <a title="Vers la page des ressources" href="#">Ressources</a>
-                </li>
-                <li>
-                    <a title="Visiter le site officiel GT Metrix" href="https://gtmetrix.com/">GTMetrix</a>
-                </li>
-                <li>
-                    <a title="Visiter le site officiel W3C" href="https://www.w3.org/">W3C</a>
-                </li>
-                <li>
-                    <a title="Visiter le site officiel Web Aim" href="https://webaim.org/">WEB Aim</a>
-                </li>
-                <li>
-                    <a title="Visiter le site officiel Dash" href="https://kapeli.com/dash">Dash</a>
-                </li>
-            </ul>
-            <ul role="list" class="footer__col4">
-                <li>
-                    <a title="Visiter le site d'achat de mon ordinateur"
-                       href="https://www.apple.com/be-fr/shop/buy-mac/macbook-pro">Mon ordinateur</a>
-                </li>
-                <li>
-                    <a title="Visiter mon club favoris" href="https://fr.mancity.com/">Mon club favoris</a>
-                </li>
-                <li>
-                    <a title="Visiter ma marque favorite" href="https://forever-vacation.com/">Ma marque favorite</a>
-                </li>
-            </ul>
-            <ul role="list" class="footer__col5" itemscope itemtype="https://schema.org/contactPoint">
-                <li>
-                    <a title="Envoyer un email à Sam" href="mailto:samrequena1510@gmail.com"><span itemprop="email">samrequena1510@gmail.com</span></a>
-                </li>
-                <li>
-                    <a title="Téléphoner à Sam" href="tel:+32472860218"><span
-                            itemprop="telephone">+ 32 (0)472 86 02 18</span></a>
-                </li>
-            </ul>
+            <div class="footer__container">
+                <ul role="list" class="footer__container__col1">
+                    <li>
+                        <a title="Retour à l'accueil" href="#home">Accueil</a>
+                    </li>
+                    <li>
+                        <a title="Visitez mon portfolio" href="#portfolio">Portfolio</a>
+                    </li>
+                </ul>
+                <ul role="list" class="footer__container__col2">
+                    <li>
+                        <a title="Vers la partie de mon parcours" href="#parcours">Mon parcours</a>
+                    </li>
+                    <li>
+                        <a title="Vers la partie à propos de moi" href="#about">A propos de moi</a>
+                    </li>
+                    <li>
+                        <a title="Vers la partie de mes compétences" href="#skills">Mes compétences</a>
+                    </li>
+                </ul>
+                <ul role="list" class="footer__container__col3">
+                    <li>
+                        <a title="Vers la page des ressources" href="#">Ressources</a>
+                    </li>
+                    <li>
+                        <a title="Visiter le site officiel GT Metrix" href="https://gtmetrix.com/">GTMetrix</a>
+                    </li>
+                    <li>
+                        <a title="Visiter le site officiel W3C" href="https://www.w3.org/">W3C</a>
+                    </li>
+                    <li>
+                        <a title="Visiter le site officiel Web Aim" href="https://webaim.org/">WEB Aim</a>
+                    </li>
+                    <li>
+                        <a title="Visiter le site officiel Dash" href="https://kapeli.com/dash">Dash</a>
+                    </li>
+                </ul>
+                <ul role="list" class="footer__container__col4">
+                    <li>
+                        <a title="Visiter le site d'achat de mon ordinateur"
+                           href="https://www.apple.com/be-fr/shop/buy-mac/macbook-pro">Mon ordinateur</a>
+                    </li>
+                    <li>
+                        <a title="Visiter mon club favoris" href="https://fr.mancity.com/">Mon club favoris</a>
+                    </li>
+                    <li>
+                        <a title="Visiter ma marque favorite" href="https://forever-vacation.com/">Ma marque
+                            favorite</a>
+                    </li>
+                </ul>
+                <ul role="list" class="footer__container__col5" itemscope itemtype="https://schema.org/contactPoint">
+                    <li>
+                        <a title="Envoyer un email à Sam" href="mailto:samrequena1510@gmail.com"><span itemprop="email">samrequena1510@gmail.com</span></a>
+                    </li>
+                    <li>
+                        <a title="Téléphoner à Sam" href="tel:+32472860218"><span
+                                itemprop="telephone">+ 32 (0)472 86 02 18</span></a>
+                    </li>
+                </ul>
+
             <hr><!--Barre de séparation-->
-            <ul role="list" class="footer__infos">
-                <li>
-                    <a title="Retour en haut de la page" href="/">&copy; Curriculum Vitae</a>
-                </li>
-                <li>
-                    <a title="Retour en haut de la page" href="/">Sam</a>
-                </li>
-                <li>
-                    <a title="Retour en haut de la page" href="/">Requena</a>
-                </li>
-            </ul>
+            <div class="footer__group">
+                <a title="Retour en haut de la page" href="/">&copy; Curriculum Vitae</a>
+                <ul role="list" class="footer__group__infos">
+                    <li>
+                        <a title="Retour en haut de la page" href="/">Site original</a>
+                    </li>
+                    <li>
+                        <a title="Retour en haut de la page" href="/">Sam</a>
+                    </li>
+                    <li>
+                        <a title="Retour en haut de la page" href="/">Requena</a>
+                    </li>
+                </ul>
+            </div>
             <ul role="list" id="social" class="footer__social">
                 <li>
                     <a href="https://github.com/requena-sam" title="Vers mon profil Github">
-                        <img src="#" alt="Mon Github">
+                        <img src="src/img/github.png" alt="Mon Github">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/sam_requena/" title="Vers mon profil Instagram">
-                        <img src="#" alt="Mon instagram">
+                        <img src="src/img/instagram.png" alt="Mon instagram">
                     </a>
                 </li>
             </ul>
+            </div>
             <div class="footer__copyright">
                 <p class="footer__copyright__text">
                     Tous droits réservés. Aucune reproduction, distribution ou transmission du contenu de ce site n'est
@@ -502,8 +509,7 @@
                     consentement explicite.
                 </p>
                 <p class="footer__copyright__text">
-                    Ce site peut contenir des liens vers d'autres sites web, mais nous déclinons toute responsabilité
-                    quant à leurs pratiques de confidentialité.
+                    Ce site est une copie du site <a href="https://www.modernlife.com/" title="Lien vers le site Modern Life">Modern Life</a> réalisé dans le cadre de mon apprentissages à la Haute Ecole de la Province de liége.
                 </p>
             </div>
         </section>
