Adding scss transform to full screen

--- a/index.html
+++ b/index.html
@@ -220,6 +220,20 @@
                     Découvrez mes compétences acquises lors de mon parcours scolaire ainsi que dans ma vie
                     professionnelle.
                 </p>
+                <svg  class="special_hidden" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 419.99 373.73">
+                    <defs>
+                        <style>.cls-1 {
+                            fill: none;
+                            stroke: #000;
+                            stroke-miterlimit: 10;
+                            stroke-width: 2px;
+                        }</style>
+                    </defs>
+                    <g id="Calque_2-2">
+                        <path class="cls-1"
+                              d="M32.17.46C-23.53,109.03,2.26,213.29,55.9,240.4c47.46,23.99,115.23-13.16,148.98-43.51,8.37-7.53,71.35-65.63,53.39-119.97-1.77-5.35-6.36-25.55-21.09-30.98-22.1-8.14-52.31,21.76-64.6,37.57-38.96,50.11-37.15,137.65-.66,197.1,44.78,72.95,144.63,108.26,247.85,85.04"/>
+                    </g>
+                </svg>
             </div>
             <div class="skills__container__column2">
                 <article class="skills__container__column2__article max">
@@ -252,7 +266,8 @@
                         Soft skills__container
                     </h3>
                     <p class="skills__container__column2__article__text">
-                        Doté de solides soft skills__container, je facilite la collaboration grâce à une communication claire et
+                        Doté de solides soft skills__container, je facilite la collaboration grâce à une communication
+                        claire et
                         une
                         adaptabilité rapide. Ma créativité et mon sens de l'écoute renforcent les relations
                         professionnelles, favorisant une approche collaborative et orientée résultats.
@@ -268,7 +283,8 @@
                         dynamiques, assurant ainsi une contribution agile et proactive aux projets.
                     </p>
                 </article>
-                <a href="#parcours" class="skills__container__column2__link" title="Vers la description de mon parcours">
+                <a href="#parcours" class="skills__container__column2__link"
+                   title="Vers la description de mon parcours">
                     Revoir mon parcours juste ici&nbsp;!
                 </a>
             </div>
