Adding scss fixing some bugs

--- a/index.html
+++ b/index.html
@@ -301,45 +301,50 @@
             </p>
         </div>
         <span class="reviews__smallText">Que disent ils&nbsp;?</span>
-        <article class="reviews__article" itemscope itemtype="https://schema.org/Review">
-            <h2 role="heading" aria-level="2" class="reviews__article__title hidden" itemprop="name">Avis Frédéric
-                Dubois</h2>
-            <p class="reviews__article__text" itemprop="reviewBody">
-                “Sam a dépassé nos attentes avec le design de notre boutique en ligne. Le site
-                capture parfaitement l'essence de notre artisanat, offrant une expérience visuelle captivante. Grâce à
-                son expertise, notre boutique en ligne est maintenant moderne et attire l'attention de nos clients.
-                Merci à Sam pour son dévouement et son professionnalisme exceptionnels !”
-            </p>
-            <p class="reviews__article__name">
-                Frédéric Dubois <span>Electricien indépendant</span>
-            </p>
-        </article>
-        <article class="reviews__article" itemscope itemtype="https://schema.org/Review">
-            <h2 role="heading" aria-level="2" class="reviews__article__title hidden" itemprop="name">Avis Luca
-                Roberty</h2>
-            <p class="reviews__article__text" itemprop="reviewBody">
-                “Il a créé un site web exceptionnel pour moi en tant que photographe. Il a
-                capturé parfaitement l'esthétique de mon travail, offrant une présentation visuelle saisissante. Le site
-                est simple, élégant, et met en valeur mon portfolio de manière percutante. Très satisfait de la
-                collaboration avec Sam pour un résultat professionnel et esthétiquement plaisant.”
-            </p>
-            <p class="reviews__article__name">
-                Luca Roberty <span>Photographe</span>
-            </p>
-        </article>
-        <article class="reviews__article" itemscope itemtype="https://schema.org/Review">
-            <h2 role="heading" aria-level="2" class="reviews__article__title hidden" itemprop="name">Avis Chenghao
-                Pan</h2>
-            <p class="reviews__article__text" itemprop="reviewBody">
-                “Un grand merci à Sam pour avoir transformé notre approche des commandes en
-                ligne. Le site web de notre restaurant est maintenant plus convivial grâce à sa conception intuitive et
-                à ses fonctionnalités pratiques. Sam a su répondre rapidement à nos besoins spécifiques, rendant le
-                processus agréable. Nous recommandons vivement Sam.
-            </p>
-            <p class="reviews__article__name">
-                Chenghao Pan <span>Restaurateur</span>
-            </p>
-        </article>
+        <div class="reviews__slider">
+            <article class="reviews__slider__article" itemscope itemtype="https://schema.org/Review">
+                <h2 role="heading" aria-level="2" class="reviews__slider__article__title hidden" itemprop="name">Avis Frédéric
+                    Dubois</h2>
+                <p class="reviews__slider__article__text" itemprop="reviewBody">
+                    “Sam a dépassé nos attentes avec le design de notre boutique en ligne. Le site
+                    capture parfaitement l'essence de notre artisanat, offrant une expérience visuelle captivante. Grâce
+                    à
+                    son expertise, notre boutique en ligne est maintenant moderne et attire l'attention de nos clients.
+                    Merci à Sam pour son dévouement et son professionnalisme exceptionnels !”
+                </p>
+                <p class="reviews__slider__article__name">
+                    Frédéric Dubois <span>Electricien indépendant</span>
+                </p>
+            </article>
+            <article class="reviews__slider__article" itemscope itemtype="https://schema.org/Review">
+                <h2 role="heading" aria-level="2" class="reviews__slider__article__title hidden" itemprop="name">Avis Luca
+                    Roberty</h2>
+                <p class="reviews__slider__article__text" itemprop="reviewBody">
+                    “Il a créé un site web exceptionnel pour moi en tant que photographe. Il a
+                    capturé parfaitement l'esthétique de mon travail, offrant une présentation visuelle saisissante. Le
+                    site
+                    est simple, élégant, et met en valeur mon portfolio de manière percutante. Très satisfait de la
+                    collaboration avec Sam pour un résultat professionnel et esthétiquement plaisant.”
+                </p>
+                <p class="reviews__slider__article__name">
+                    Luca Roberty <span>Photographe</span>
+                </p>
+            </article>
+            <article class="reviews__slider__article" itemscope itemtype="https://schema.org/Review">
+                <h2 role="heading" aria-level="2" class="reviews__slider__article__title hidden" itemprop="name">Avis Chenghao
+                    Pan</h2>
+                <p class="reviews__slider__article__text" itemprop="reviewBody">
+                    “Un grand merci à Sam pour avoir transformé notre approche des commandes en
+                    ligne. Le site web de notre restaurant est maintenant plus convivial grâce à sa conception intuitive
+                    et
+                    à ses fonctionnalités pratiques. Sam a su répondre rapidement à nos besoins spécifiques, rendant le
+                    processus agréable. Nous recommandons vivement Sam.
+                </p>
+                <p class="reviews__slider__article__name">
+                    Chenghao Pan <span>Restaurateur</span>
+                </p>
+            </article>
+        </div>
         <div class="info">
             <div class="info__content">
                 <h2 role="heading" aria-level="2" class="info__content__title">
